# orchestration-demo

./: README.md  deployment.yaml  orchestration.tf  pyproject.toml  terraform.tfstate  test.py
.github/workflows/: orchestration.yaml
airflow/: airflow_dag_pipeline.py
pipeline/benthos/: benthos.yaml  input.json
spam-classifier/: Dockerfile  app.py
