[tool.poetry]
name = "Orchestration Demo"
version = "0.0.1"
description = "Orchestration Demo for BITS"
authors = ["Raj Mishra <rajendramishra@wilp.bits-pilani.ac.in>"]

[tool.poetry.dependencies]
python = "^3.9.7"
attrs = "^19"
luigi = "^3.0.2"
numpy = "1.23.5"
pandas = "^1.1.3"
pykube-ng = "20.10.0"
requests = "^2.24.0"
boto3 = "1.16.0"
pyathena = "1.11.2"
docker = "4.4.0"
click = "7.1.2"
pyyaml = "^5.4.1"
retry = "^0.9.2"
requests-oauthlib = "^1.3.0"
nltk = "3.5"
unicodeblock = "^0.3.1"
scipy = "^1.8.0"
pandarallel = "^1.6.1"
jsonlines = "^3.0.0"
clana = "^0.4.1"
lda = "^2.0.0"
cleanlab = "^2.2.0"
transformers = "^4.28.1"
deepspeed = "^0.9.0"
onnxruntime = "^1.15.0"
optimum = "^1.8.6"
onnx = "^1.14.0"
ipywidgets = "^8.1.1"
nbstripout = "^0.6.1"
openai = "^1.8.0"
luqum = "^0.13.0"
yapf = "^0.40.2"

[tool.poetry.dev-dependencies]
pytest = "4.3.1"
pytest-cov = "2.8.1"
mountepy = "^0.4.1"
taskipy = "^1.2.1"
jupyterlab = "^2.2.8"
seaborn = "^0.11.0"
responses = "0.12.1"
intervaltree = "^3.1.0"

[tool.taskipy.tasks]
test = "pytest"
install_toc = "jupyter labextension install @jupyterlab/toc"
install_jupyter_kernel = "python -m ipykernel install --user --name=jupyter_experiments"
list_jupyter_kernels = "jupyter kernelspec list"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
